superbitty/tests/ui/BitFieldCompatible/structs/no_size_option.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
#[bit_field()]
struct InvalidOptions(u32);

fn main() {}
